# nse-feed-parser

./: CMakeLists.txt  client.cpp  main.cpp  shared_memory_writer.cpp
include/drivers/: Redis.h
include/ds/: Bounded_Queue.h  Market_Depth.h  Market_Depth_Map.h  OHLC_Map.h  Order_Map.h  Token_Map.h
include/process/: Bcast_Header.h  Bcast_Pack_Data.cpp  Bcast_Pack_Data.h  Compression_Broadcast_Data.h  Interactive_Only_MBP_Data.h  MBP_Information.h  Snapshot.h  Types.h
include/schema/: Contract_Data.h  Contract_File.h  Contract_File_Record.h  Depth.h  Max_Heap_Comparator.h  Min_Heap_Comparator.h  OHLC.h  OHLC_Pool.h  Order_Message.h  Stream_Header.h  Trade_Message.h
include/udp_multicast_reciever/: UDPMulticastReciever.h
src/UDPClient/: UDPClient.cpp  UDPClient.h
src/UDPMulticastReciever/: CMakeLists.txt  UDPMulticastReciever.cpp
src/UDPServer/: UDPServer.cpp  UDPServer.h
test_files/nse/nse_eq/: CM_52_wk_High_low.csv
tests/: Bounded_Queue_Test.cpp  CMakeLists.txt  Map_Serializer.cpp
